--- a/NBTSCAN/NBTSCAN.vcxproj.filters
+++ b/NBTSCAN/NBTSCAN.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="ipv4_address.cpp">
       <Filter>Source Files\Device</Filter>
     </ClCompile>
+    <ClCompile Include="arp_host_scanner.cpp">
+      <Filter>Source Files\HostScanning</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -109,6 +112,9 @@
     </ClInclude>
     <ClInclude Include="ipv4_address.h">
       <Filter>Header Files\Device</Filter>
+    </ClInclude>
+    <ClInclude Include="arp_host_scanner.h">
+      <Filter>Header Files\HostScanning</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
