--- a/NBTSCAN/NBTSCAN.vcxproj
+++ b/NBTSCAN/NBTSCAN.vcxproj
@@ -77,7 +77,7 @@
       <AdditionalIncludeDirectories>../npcap-sdk-1.13/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>..\npcap-sdk-1.13\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\npcap-sdk-1.13\lib-x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>wpcap.lib;ws2_32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;Iphlpapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <DelayLoadDLLs>wpcap.dll</DelayLoadDLLs>
     </Link>
@@ -121,12 +121,14 @@
     <ClCompile Include="arp_host_scanner.cpp" />
     <ClCompile Include="arp_request.cpp" />
     <ClCompile Include="console_color.cpp" />
+    <ClCompile Include="console_tools.cpp" />
     <ClCompile Include="device_address.cpp" />
     <ClCompile Include="device_manager.cpp" />
     <ClCompile Include="headers.cpp" />
     <ClCompile Include="host.cpp" />
     <ClCompile Include="host_scanner.cpp" />
     <ClCompile Include="ipv4_address.cpp" />
+    <ClCompile Include="mac_address.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="target.cpp" />
     <ClCompile Include="tcp_host_scanner.cpp" />
@@ -137,12 +139,14 @@
     <ClInclude Include="arp_host_scanner.h" />
     <ClInclude Include="arp_request.h" />
     <ClInclude Include="console_color.h" />
+    <ClInclude Include="console_tools.h" />
     <ClInclude Include="device_address.h" />
     <ClInclude Include="device_manager.h" />
     <ClInclude Include="headers.h" />
     <ClInclude Include="host.h" />
     <ClInclude Include="host_scanner.h" />
     <ClInclude Include="ipv4_address.h" />
+    <ClInclude Include="mac_address.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="target.h" />
     <ClInclude Include="tcp_host_scanner.h" />
